# kaspi-parser

./: README.md  main.py  pyproject.toml
kaspi/: types.py  utils.py
